--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,10 @@ frontend:
     build:
       commands:
         - npm run build
+        - echo "=== Build completed, checking dist folder ==="
+        - ls -la dist/
+        - echo "=== Checking assets folder ==="
+        - ls -la dist/assets/ || echo "Assets folder not found!"
   artifacts:
     baseDirectory: dist
     files:
