fix: deploy complete standalone build with server.js and static assets

--- a/amplify.yml
+++ b/amplify.yml
@@ -11,8 +11,11 @@ applications:
             - echo "NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL" >> .env.production
             - echo "NEXT_PUBLIC_USER_ID=$NEXT_PUBLIC_USER_ID" >> .env.production
             - npm run build
+            - cp -r .next/standalone/. .next/
+            - cp -r public .next/standalone/public
+            - cp -r .next/static .next/standalone/.next/static
       artifacts:
-        baseDirectory: .next
+        baseDirectory: .next/standalone
         files:
           - '**/*'
       cache:
